--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <meta name="author"
     content="Amber Miller">
     <title>Media</title>
+    <style>
+    body {
+        background-color: powderblue;
+        text-align: center;
+    }
+    .container {
+      background-color: white;
+      width: 600px;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid black;
+    }
+    .lyrics p, pre {
+      background-color: grey;
+      color: white;
+      font-size: small;
+      font-family: Arial;
+    }   
+  </style>
   </head>
 
   <body>
