--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
   </head>
 
   <body>
-    <div>
+    <div class="container">
     <h1> Art</h1>
+    <p>This is the cover art for the Katy Perry song Firework!</p>
+    <img src="" alt="" title="" width="" height=""
     </div>
 
-    <div>
-    <p>This is the cover art for the Katy Perry song Firework! </p>
+    <div class="container">
+    <h2>Video</h2>
+    <p>This is the music video for Firework by Katy Perry</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/QGJuMBdaqIw?si=EAmg5xJGcKgkF4MF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
     </div>
 
   </body>
