--- a/index.html
+++ b/index.html
@@ -39,8 +39,21 @@
     <h2>Video</h2>
     <p>This is the music video for Firework by Katy Perry</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/QGJuMBdaqIw?si=EAmg5xJGcKgkF4MF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    
     </div>
+
+    <div class="container lyrics">
+    Do you ever feel like a plastic bag
+    Drifting through the wind, <b>wanting</b>  to start again?
+    Do you ever feel, feel so paper thin
+    Like a house of cards, one blow from cavin' in?
+    Do you ever feel already buried deep?
+    Six feet under screams, but no one seems to hear a thing
+    Do you know that there's still a chance for you?
+    'Cause there's a spark in you
+
+    </div>
+
+
 
   </body>
 </html>
