--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <div class="container">
     <h2>Video</h2>
     <p>This is the music video for Firework by Katy Perry</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/QGJuMBdaqIw?si=EAmg5xJGcKgkF4MF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/QGJuMBdaqIw?si=EAmg5xJGcKgkF4MF" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <div class="container lyrics">
