--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
 
     <div class="container lyrics">
     Do you ever feel like a plastic bag
-    Drifting through the wind, <b>wanting</b>  to start again?
-    Do you ever feel, feel so paper thin
-    Like a house of cards, one blow from cavin' in?
-    Do you ever feel already buried deep?
-    Six feet under screams, but no one seems to hear a thing
-    Do you know that there's still a chance for you?
+    Drifting through the wind, wanting<br />
+    to start again? Do you ever feel,<br />
+    feel so paper thin. Like a house of<br />
+    cards, one blow from cavin' in? Do<br />
+    you ever feel already buried deep?<br />
+    Six feet under screams, but no one<br />
+    seems to hear a thing. Do you know<br />
+    that there's still a chance for you?<br />
     'Cause there's a spark in you
 
     </div>
