Added a size to image and title

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
     <h1> Art</h1>
     <p>This is the cover art for the Katy Perry song Firework!</p>
-    <img src="" alt="" title="" width="" height=""
+    <img src="FireworkKP.png" alt="Katy Perry in a black and white striped dress with the words Katy Perry and Firework Printed on the photo" title="Katy Perry Firework" width="220" height="100"
     </div>
 
     <div class="container">
