--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
 
     <body>
     <div class="container">
-    <h1> Art</h1>
+    <p>Art</p>
     <p>This is the cover art for the Katy Perry song Firework!</p>
     <img src="FireworkKP.png" alt="Katy Perry in a black and white striped dress with the words Katy Perry and Firework Printed on the photo" title="Katy Perry Firework" width="220" height="200"
     </div>
 
     <div class="container">
-    <h2>Video</h2>
+    <p>Video</p>
     <p>This is the music video for Firework by Katy Perry</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/QGJuMBdaqIw?si=EAmg5xJGcKgkF4MF" 
     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <div class="container lyrics">
-    <h3>Lyrics</h3>
-    <p></p>
+    <p>Lyrics</p>
+    
     
 
     </div>
