changes in lyrics

--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
     Do you ever feel already buried deep?
     Six feet under screams, but no one seems to hear a thing
     Do you know that there's still a chance for you?
-    'Cause there's a spark in you</p>
+    'Cause there's a spark in you
+
+    You just gotta ignite the light
+    And let it shine
+    Just own the night
+    Like the Fourth of July
     
     
 
