--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
     <p>Art</p>
     <p>This is the cover art for the Katy Perry song Firework!</p>
-    <img src="FireworkKP.png" alt="Katy Perry in a black and white striped dress with the words Katy Perry and Firework Printed on the photo" title="Katy Perry Firework" width="220" height="200"
+    <img src="FireworkKP.png" alt="Katy Perry in a black and white striped dress with the words Katy Perry and Firework printed on the photo" title="Katy Perry Firework" width="220" height="220"
     </div>
 
     
