--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     
     <div class="container">
-    <p>Video</p>
+    <p>Video</p> 
     <p>This is the music video for Firework by Katy Perry</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/QGJuMBdaqIw?si=EAmg5xJGcKgkF4MF" 
     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -46,7 +46,7 @@
     <div class="container lyrics">
     <p>Lyrics</p>
     <p>
-    Do you ever feel like a plastic bag
+    Do you ever feel like a plastic <br>bag</br>
     Drifting through the wind, wanting to start again?
     Do you ever feel, feel so paper thin
     Like a house of cards, one blow from cavin' in?
