--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@ title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; cli
     <div class="container lyrics">
     <p>Lyrics</p>
     <p>
-    Do you ever feel like a plastic <br>bag</br>
-    Drifting through the wind, wanting to start again?
+    Do you ever feel like a plastic bag<br>Drifting through the wind, wanting to start again?</p>br>
     Do you ever feel, feel so paper thin
     Like a house of cards, one blow from cavin' in?
     Do you ever feel already buried deep?
