changes in lyrics

--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
 
     <div class="container lyrics">
     <p>Lyrics</p>
-    <p> Do you ever feel like a plastic bag
-        Drifting through the wind, wanting to start again?
-        Do you ever feel, feel so paper thin
-        Like a house of cards, one blow from cavin' in?
-        Do you ever feel already buried deep?
-        Six feet under screams, but no one seems to hear a thing
-        Do you know that there's still a chance for you?
-        'Cause there's a spark in you
-        You just gotta ignite the light
-        And let it shine
-        Just own the night
-        Like the Fourth of July
-        'Cause baby, you're a firework
-        Come on, show 'em what you're worth
-        Make 'em go, "Oh, oh, oh"
+    <p> Do you ever feel like a plastic bag <br>
+        Drifting through the wind, wanting to start again? <br>
+        Do you ever feel, feel so paper thin <br>
+        Like a house of cards, one blow from cavin' in? <br>
+        Do you ever feel already buried deep? <br>
+        Six feet under screams, but no one seems to hear a thing <br>
+        Do you know that there's still a chance for you? <br>
+        'Cause there's a spark in you <br>
+        You just gotta ignite the light <br>
+        And let it shine <br>
+        Just own the night <br>
+        Like the Fourth of July <br>
+        'Cause baby, you're a firework <br>
+        Come on, show 'em what you're worth <br>
+        Make 'em go, "Oh, oh, oh" <br> 
         As you shoot across the sky
         Baby, you're a firework
         Come on, let your colors burst
