--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
     <div class="container lyrics">
     <p>Lyrics</p>
     <p> Do you ever feel like a plastic bag <br>
-        Drifting through the wind, wanting to start again? <br>
-        Do you ever feel, feel so paper thin <br>
-        Like a house of cards, one blow from cavin' in? <br>
+        Drifting through the wind,<br>
+        wanting to start again? <br>
+        Do you ever feel, feel <br>
+        so paper thin. Like a house of cards,
+        one blow from cavin' in? <br>
         Do you ever feel already buried deep? <br>
         Six feet under screams, but no one seems to hear a thing <br>
         Do you know that there's still a chance for you? <br>
