--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
         Do you ever feel, feel <br>
         so paper thin. Like a house of cards,
         one blow from cavin' in? <br>
-        Do you ever feel already buried deep? <br>
-        Six feet under screams, but no one seems to hear a thing <br>
-        Do you know that there's still a chance for you? <br>
-        'Cause there's a spark in you <br>
-        You just gotta ignite the light <br>
+        Do you ever feel already buried 
+        deep? Six feet under screams, <br>
+        but no one seems to hear a thing <br>
+        Do you know that there's still a <br>
+        chance for you? 'Cause there's a <br>
+        spark in you. You just gotta ignite the light <br>
         And let it shine <br>
         Just own the night <br>
         Like the Fourth of July <br>
