--- a/index.html
+++ b/index.html
@@ -62,47 +62,47 @@
         'Cause baby, you're a firework <br>
         Come on, show 'em what you're worth <br>
         Make 'em go, "Oh, oh, oh" <br> 
-        As you shoot across the sky
-        Baby, you're a firework
-        Come on, let your colors burst
-        Make 'em go, "Oh, oh, oh"
-        You're gonna leave 'em all in awe, awe, awe
-        You don't have to feel like a waste of space
-        You're original, cannot be replaced
-        If you only knew what the future holds
-        After a hurricane comes a rainbow
-        Maybe a reason why all the doors are closed
-        So you could open one that leads you to the perfect road
-        Like a lightning bolt, your heart will glow
-        And when it's time, you'll know
-        You just gotta ignite the light
-        And let it shine
-        Just own the night
-        Like the Fourth of July
-        'Cause baby, you're a firework
-        Come on, show 'em what you're worth
-        Make 'em go, "Oh, oh, oh"
-        As you shoot across the sky
-        Baby, you're a firework
-        Come on, let your colors burst
-        Make 'em go, "Oh, oh, oh"
-        You're gonna leave 'em all in awe, awe, awe
-        Boom, boom, boom
-        Even brighter than the moon, moon, moon
-        It's always been inside of you, you, you
-        And now it's time to let it through
-        'Cause baby, you're a firework
-        Come on, show 'em what you're worth
-        Make 'em go, "Oh, oh, oh"
-        As you shoot across the sky
-        Baby, you're a firework
-        Come on, let your colors burst
-        Make 'em go, "Oh, oh, oh"
-        You're gonna leave 'em all in awe, awe, awe
-        Boom, boom, boom
-        Even brighter than the moon, moon, moon
-        Boom, boom, boom
-        Even brighter than the moon, moon, moon</p>
+        As you shoot across the sky <br>
+        Baby, you're a firework <br>
+        Come on, let your colors burst <br>
+        Make 'em go, "Oh, oh, oh" <br>
+        You're gonna leave 'em all in awe, awe, awe <br>
+        You don't have to feel like a waste of space <br>
+        You're original, cannot be replaced <br>
+        If you only knew what the future holds <br>
+        After a hurricane comes a rainbow <br>
+        Maybe a reason why all the doors are closed <br> 
+        So you could open one that leads you to the perfect road <br> 
+        Like a lightning bolt, your heart will glow <br> 
+        And when it's time, you'll know <br> 
+        You just gotta ignite the light <br> 
+        And let it shine <br> 
+        Just own the night <br> 
+        Like the Fourth of July <br> 
+        'Cause baby, you're a firework <br> 
+        Come on, show 'em what you're worth <br> 
+        Make 'em go, "Oh, oh, oh" <br> 
+        As you shoot across the sky <br> 
+        Baby, you're a firework <br> 
+        Come on, let your colors burst <br> 
+        Make 'em go, "Oh, oh, oh" <br> 
+        You're gonna leave 'em all in awe, awe, awe <br> 
+        Boom, boom, boom <br> 
+        Even brighter than the moon, moon, moon <br> 
+        It's always been inside of you, you, you <br> 
+        And now it's time to let it through <br> 
+        'Cause baby, you're a firework <br> 
+        Come on, show 'em what you're worth <br> 
+        Make 'em go, "Oh, oh, oh" <br> 
+        As you shoot across the sky <br> 
+        Baby, you're a firework <br> 
+        Come on, let your colors burst <br>
+        Make 'em go, "Oh, oh, oh" <br>
+        You're gonna leave 'em all in awe, awe, awe <br> 
+        Boom, boom, boom <br>
+        Even brighter than the moon, moon, moon <br>
+        Boom, boom, boom <br> 
+        Even brighter than the moon, moon, moon</p> <br>
     
     
 
