--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
     <p>Art</p>
     <p>This is the cover art for the Katy Perry song Firework!</p>
-    <img src="https://i.postimg.cc/kgLjRSRy/KPFirework.png" alt="Katy Perry with dark hair and hands up around her face"  title="Katy Perry Firework" width="220" height="220"
+    <img src="https://i.postimg.cc/kgLjRSRy/KPFirework.png" alt="Katy Perry with dark hair and hands up around her face"  title="Katy Perry Firework" width="220" height="220">
     </div>
 
  <div class="container">
